Move retry into client