@@ -9,21 +9,13 @@ import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.rest.server.exceptions.UnprocessableEntityException;
 import java.lang.reflect.InvocationTargetException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.concurrent.CancellationException;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionException;
-import java.util.concurrent.TimeUnit;
 import org.apache.commons.lang3.StringUtils;
 import org.hl7.fhir.instance.model.api.IBaseBackboneElement;
 import org.hl7.fhir.instance.model.api.IPrimitiveType;
 import org.opencds.cqf.fhir.api.Repository;
-import org.opencds.cqf.fhir.cql.engine.terminology.TerminologySettings;
 import org.opencds.cqf.fhir.utility.Canonicals;
 import org.opencds.cqf.fhir.utility.Constants;
 import org.opencds.cqf.fhir.utility.Parameters;
@@ -37,13 +29,9 @@ import org.slf4j.LoggerFactory;
 
 public class ExpandHelper {
     private static final Logger myLogger = LoggerFactory.getLogger(ExpandHelper.class);
-    private static final int MAX_RETRIES = 3;
     private final Repository repository;
     private final TerminologyServerClient terminologyServerClient;
-    public static final List<String> unsupportedParametersToRemove =
-            Collections.unmodifiableList(new ArrayList<String>(Arrays.asList(Constants.CANONICAL_VERSION)));
-    private int expansionAttempt = 0;
-    private TerminologySettings terminologySettings = new TerminologySettings();
+    public static final List<String> unsupportedParametersToRemove = List.of(Constants.CANONICAL_VERSION);
 
     public ExpandHelper(Repository repository, TerminologyServerClient server) {
         this.repository = repository;
@@ -91,7 +79,7 @@ public class ExpandHelper {
                 && (authoritativeSourceUrl == null
                         || authoritativeSourceUrl.equals(
                                 terminologyEndpoint.get().getAddress()))) {
-            terminologyServerExpand(valueSet, expansionParameters, terminologyEndpoint);
+            terminologyServerExpand(valueSet, expansionParameters, terminologyEndpoint.get());
         }
         // Else if the ValueSet has a simple compose then we will perform naive expansion.
         else if (valueSet.hasSimpleCompose()) {
@@ -115,53 +103,14 @@ public class ExpandHelper {
     }
 
     private void terminologyServerExpand(
-            IValueSetAdapter valueSet,
-            IParametersAdapter expansionParameters,
-            Optional<IEndpointAdapter> terminologyEndpoint) {
-        expansionAttempt = 0;
-        while (expansionAttempt < terminologySettings.getMaxRetryCount()) {
-            long delay = terminologySettings.getRetryIntervalMillis() * expansionAttempt;
-            expansionAttempt++;
-            var executor = CompletableFuture.delayedExecutor(delay, TimeUnit.MILLISECONDS);
-            CompletableFuture<Void> future = CompletableFuture.runAsync(
-                    () -> {
-                        var expandedValueSet =
-                                (IValueSetAdapter) createAdapterForResource(terminologyServerClient.expand(
-                                        valueSet, terminologyEndpoint.get(), expansionParameters));
-                        // expansions are only valid for a particular version
-                        if (!valueSet.hasVersion()) {
-                            valueSet.setVersion(expandedValueSet.getVersion());
-                        }
-                        valueSet.setExpansion(expandedValueSet.getExpansion());
-                    },
-                    executor);
-
-            try {
-                future.join();
-                break;
-            } catch (CompletionException ex) {
-                if (ex.getCause() instanceof NullPointerException) {
-                    // If NPE is thrown once, it will always be thrown - don't retry
-                    throw new UnprocessableEntityException(String.format(
-                            "Terminology Server expansion failed for ValueSet (%s): %s",
-                            valueSet.getId(), ex.getMessage()));
-                } else {
-                    myLogger.info("Expansion attempt:" + expansionAttempt + " failed.");
-                    if (expansionAttempt == terminologySettings.getMaxRetryCount()) {
-                        throw new UnprocessableEntityException(String.format(
-                                "Final Terminology Server expansion attempt failed for ValueSet (%s): %s",
-                                valueSet.getId(), ex.getMessage()));
-                    }
-                }
-            } catch (CancellationException ex) {
-                myLogger.info("Expansion attempt:" + expansionAttempt + " cancelled.");
-                if (expansionAttempt == terminologySettings.getMaxRetryCount()) {
-                    throw new UnprocessableEntityException(String.format(
-                            "Final Terminology Server expansion attempt cancelled for ValueSet (%s): %s",
-                            valueSet.getId(), ex.getMessage()));
-                }
-            }
+            IValueSetAdapter valueSet, IParametersAdapter expansionParameters, IEndpointAdapter terminologyEndpoint) {
+        var expandedValueSet = (IValueSetAdapter) createAdapterForResource(
+                terminologyServerClient.expand(valueSet, terminologyEndpoint, expansionParameters));
+        // expansions are only valid for a particular version
+        if (!valueSet.hasVersion()) {
+            valueSet.setVersion(expandedValueSet.getVersion());
         }
+        valueSet.setExpansion(expandedValueSet.getExpansion());
     }
 
     private void groupExpand(
